h3. 9.2.2 (2015-08-03)
* 2015-07-30: Moved condition logic to its own method to give app developer a chance to configure it to not perform future date validation [val99erie]

* 2015-07-21: Changes content header for JSON-LD mimetype. [Andrew Myers]

h3. 9.2.1 (2015-07-28)
* 2015-07-17: Append MIME types in the install generator. Fixes #132 [Michael J.
Giarlo]

* 2015-07-15: Setting visibility= doesn't create an embargo/lease if one doesn't
exist. Fixes #272 [Justin Coyne]

* 2015-07-14: Set travis to use JDK 8 [Justin Coyne]

* 2015-07-14: Embargoable#valid? shouldn't create a Lease or Embargo This should
be a significant speedup for projects that use Embargoable Ref
https://github.com/projecthydra-labs/sufia-core/issues/31 [Justin Coyne]

* 2015-07-09: Fix permissions when setting visibility to public from
authenticated. [Olli Lyytinen]

h3. 9.2.0 (2015-07-08)
* Don't index permissions marked for destruction [Justin Coyne]

h3. 9.2.0.rc1 (2015-06-30)
* Support ActiveFedora 9.2.0 [Justin Coyne]

* Fixed typo in warning messages. Fixes #263 [Hector Correa]

* uses explicit syntax about the scope of url routes used when redirecting a user based on access denial [Matt Zumwalt]

* Add Content Negotiation [Trey Terrell]

h3. 9.1.4 (2015-4-17)
* Admin Policies should remember their permissions. Fixes #257 [Justin Coyne]

h3. 9.1.3 (2015-4-16)
* Loosen version lock on active-fedora

h3. 9.1.2 (2015-3-12)
* Added Hydra::Catalog module to parallel Blacklight::Catalog
* Extract Hydra::Controller::SearchBuilder from Hydra::Controller::ControllerBehavior

h3. 9.1.1 (2015-3-10)
* Fixed policy based access controls for Fedora 4

h3. 9.1.0 (2015-3-6)
* Support blacklight 5.10.0

* Don't autoload ModsAsset.

* Deprecate ModsAsset.

h3. 9.0.1 (2015-1-30)
* 2015-01-30: Update gemspecs to point at ActiveFedora 9.0.0 Also added versions
to gems that didn't have any. Fixes #192 Removed unused block_helpers depenency
[Justin Coyne]
